# Clarity

./: .gitignore  CMakeLists.txt
src/: board.cpp  board.h  globals.cpp  globals.h  move.cpp  movegen.cpp  nnue.cpp  nnue.h  search.cpp  search.h  testessentials.h  tt.cpp  tt.h  tuner.h  uci.cpp
